[package]
name = "jechsoft"
version = "0.1.0"
description= "Jechsoft Victoria interface library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
chrono = "0.4.23"
time = { version = "0.3.17", features = ["parsing", "formatting", "macros"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
url = { version = "2.3.1", features = ["serde"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0.37"
serde-email = "1.1.0"
serde_path_to_error = "0.1.8"
gregorian = { version = "0.2.4", features = ["serde"] }
num = "0.4.1"
encoding = "0.2.33"
bytes = "1.6.0"
find_all = "2.0.0"
