[package]
name = "moisty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
env_logger = "0.11.3"
jechsoft = {path="../jechsoft"}
log = "0.4.22"
tabled = "0.15.0"
